# async-tiff

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  show_image.py
.github/workflows/: python-docs-publish.yml  python-wheels.yml  test-python.yml  test.yml
examples/: http.rs
python/: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  mkdocs.yml  pyproject.toml
python/docs/api/: decoder.md  geo.md  ifd.md  thread-pool.md  tiff.md  tile.md
python/docs/api/store/: aws.md  azure.md  config.md  gcs.md  http.md  index.md  local.md  memory.md
python/python/async_tiff/: __init__.py  _decoder.pyi  _ifd.pyi  _thread_pool.pyi  _tiff.pyi  _tile.pyi  enums.py
python/src/: decoder.rs  enums.rs  geo.rs  ifd.rs  lib.rs  reader.rs  thread_pool.rs  tiff.rs  tile.rs  value.rs
python/tests/: test_cog.py  test_exceptions.py
src/: async_reader.rs  bytecast.rs  coalesce_ranges.rs  cog.rs  cursor.rs  decoder.rs  decoding_result.rs  error.rs  ifd.rs  lib.rs  predictor.rs  reader.rs  tile.rs
src/geo/: affine.rs  geo_key_directory.rs  mod.rs  partial_reads.rs
src/metadata/: extra_tags.rs  fetch.rs  mod.rs  reader.rs
src/object_store/: util.rs
src/tiff/: error.rs  ifd.rs  mod.rs  tags.rs
tests/: mod.rs  ome_tiff.rs  sample-exif.tiff
tests/image_tiff/: README.md  decode_bigtiff_images.rs  decode_fp16_images.rs  decode_geotiff_images.rs  decode_images.rs  mod.rs  predict.rs  util.rs
tests/util/: mod.rs
