[package]
name = "async-tiff"
version = "0.1.0-beta.1"
authors = ["Kyle Barron <kyle@developmentseed.org>"]
edition = "2021"
# description = "Fast, memory-efficient 2D spatial indexes for Python."
readme = "README.md"
repository = "https://github.com/developmentseed/async-tiff"
license = "MIT OR Apache-2.0"
keywords = ["python", "geospatial"]
categories = ["science::geo"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_async_tiff"
crate-type = ["cdylib"]

[dependencies]
async-tiff = { path = "../" }
bytes = "1.8"
pyo3 = { version = "0.23.0", features = ["macros"] }
pyo3-bytes = "0.1.2"
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
