[package]
name = "async-tiff"
version = "0.1.0-beta.1"
authors = ["Kyle Barron <kyle@developmentseed.org>"]
edition = "2021"
# description = "Fast, memory-efficient 2D spatial indexes for Python."
readme = "README.md"
repository = "https://github.com/developmentseed/async-tiff"
license = "MIT OR Apache-2.0"
keywords = ["python", "geospatial"]
categories = ["science::geo"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_async_tiff"
crate-type = ["cdylib"]

[dependencies]
async-tiff = { path = "../" }
bytes = "1.8"
# Match the version used by pyo3-object-store
object_store = { git = "https://github.com/apache/arrow-rs", rev = "7a15e4b47ca97df2edef689c9f2ebd2f3888b79e" }
pyo3 = { version = "0.23.0", features = ["macros"] }
pyo3-async-runtimes = "0.23"
pyo3-bytes = "0.1.2"
pyo3-object_store = { git = "https://github.com/developmentseed/obstore", rev = "28ba07a621c1c104f084fb47ae7f8d08b1eae3ea" }
thiserror = "1"
tiff = "0.9.1"

# We opt-in to using rustls as the TLS provider for reqwest, which is the HTTP
# library used by object_store.
# https://github.com/seanmonstar/reqwest/issues/2025
reqwest = { version = "*", default-features = false, features = [
    "rustls-tls-native-roots",
] }

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
object_store = { git = "https://github.com/apache/arrow-rs", rev = "7a15e4b47ca97df2edef689c9f2ebd2f3888b79e" }
